# zero-shot-sdd-harness-hermes

./: .env.example  .gitignore  .hermes.md  AGENTS.md  Dockerfile  HARNESS_FEEDBACK.md  NOTES.md  PHASE1_HANDOFF.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sample_crime.csv  test_bilingual.py  test_e2e.py  vercel.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase2.py  0003_phase3.py  4ae7147e0d37_initial.py
api/: index.py
data-analyst/: .gitignore  README.md
data-analyst/backend/: DataAnalyst.Backend.csproj  Program.cs
data-analyst/frontend/: index.html  package-lock.json  package.json  vite.config.js
data-analyst/seed/: DataAnalyst.Seed.csproj  Program.cs
data-analyst/tests/: ChartServiceTests.cs  DataAnalyst.Tests.csproj  SchemaProfileSerializerTests.cs  SqlGuardTests.cs
docs/: phase4.md
frontend/: next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  postcss.config.js  vite.config.ts
frontend/app/: dictation.tsx  globals.css  layout.tsx  page.tsx  phrase.tsx  staff.tsx
frontend/public/: app.js  index.html  styles.css
frontend/src/: App.tsx  index.css
harness/agents/: agent-builder.md  code-generator.md  qa-auditor.md  spec-writer.md
harness/commands/: zero-shot-build.md  zero-shot-fix.md  zero-shot-sync.md
harness/patterns/: agentic-ai.md  phases.md  project-layout.md  tech-stack.md
harness/rules/: ai-agents.md  git.md
scripts/: bootstrap.py
spec/: README.md  agent.md  api.md  architecture.md  capabilities.md  data.md  roadmap.md  ui.md
spec/capabilities/: aggregate-and-funnel.md  analyse_data.md  analyze.md  analyze_crime_data.md  anomaly_highlight.md  answer_question.md  ask_question.md  audio-speech-adaptive.md  audit-log.md  audit_write.md  chart-generate.md  csv-analyst.md  csv-query.md  csv-upload-and-qa.md  csv_export.md  dialogue-generation.md  execute_bounded_query.md  history_list.md  index.md  live-mssql-query.md  llm-teaching.md  mssql-connect.md  named-reports-and-schedules.md  nl-to-chart.md  nl_to_sql.md  note-naming.md  pin_report.md  report-generate.md  session-persistence.md  summarize_results.md  tts-streaming.md  usage_rollup.md
src/: __init__.py  __main__.py  config.py  curriculum.py  db.py  drill.py  live_db_path.py  llm.py  main.py  prompts.py  scheduler.py  schemas.py  speech.py  summarizer.py  synth.py
src/analytics_agent/: __main__.py
src/api/: __init__.py  analyze.py  csv.py  csv_api.py  fraud_detection.py  live_db.py  routes.py  routes_db.py  routes_ingest.py  routes_query.py  runs.py  upload.py
src/capabilities/: agent.py  csv_nodes.py  csv_state.py  tasks.py
src/cctns_analyst/: __init__.py
src/config/: settings.py
src/db/: duckdb_store.py  live_db.py  models.py  mssql.py  session.py  (+2 more)
tests/: conftest.py  test_generate.py  test_health.py
(+217 files in other folders)
