[project]
name = "mssql_analyst"
version = "0.1.0"
description = "Natural-language → bounded SELECT → answer analyst over a live Microsoft SQL Server database"
requires-python = ">=3.11,<3.13"

# Per `harness/patterns/tech-stack.md` DB driver rule: production DB driver
# (`pyodbc`, used by the MSSQL connector) is declared in [project.dependencies],
# NEVER in dev-only groups. SQLite (audit log only) is not the production DB.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "structlog>=24.1",
    "google-genai>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # Production DB driver — required at runtime (Phase 1 hits live MSSQL).
    "pyodbc>=5.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "playwright>=1.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mssql_analyst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: tests that require a real LLM key in .env",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "playwright>=1.47",
]
