[project]
name = "zero-shot-agent"
version = "0.1.0"
description = "Baseline agent skeleton — FastAPI + LangGraph + MSSQL, provider-agnostic LLM. The capability slot is for police data analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "langgraph>=0.2.28",
    "httpx>=0.27",
    "structlog>=24.1",
    "pyodbc>=5.0",
    "aioodbc>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "docker>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = false